@@ -22,7 +22,6 @@ import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEParameterSpec;
 
-
 /**
  *  -----------------------------------------------------------------------------
  *  The following example implements a class for encrypting and decrypting
@@ -103,7 +102,7 @@ public final class StringEncrypter
             byte[] enc = ecipher.doFinal( utf8 );
 
             // Encode bytes to base64 to get a string
-            return new sun.misc.BASE64Encoder().encode( enc );
+            return java.util.Base64.getEncoder().encodeToString(enc);
         }
         catch (Exception e) {}
         return null;
@@ -124,7 +123,7 @@ public final class StringEncrypter
         {
 
             // Decode base64 to get bytes
-            byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer( str );
+            byte[] dec = java.util.Base64.getDecoder().decode(str);
 
             // Decrypt
             byte[] utf8 = dcipher.doFinal( dec );
